# bankapp

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: moving-machines.md  plaid-notes.md  plaid-spike-runbook.md  scheduling.md  ws-api-notes.md
docs/plans/: 2026-07-05-personal-finance-pipeline.md  2026-07-09-goals-crud-design.md  2026-07-09-goals-crud-implementation.md  2026-07-12-safe-to-spend-buckets-design.md
docs/reviews/: 2026-07-13-comprehensive-review.md
scripts/mac-app/: BankApp.applescript  build.sh  make_icon.py
src/bankapp/: __init__.py  cli.py  config.py  db.py  fx.py  goals.py  money.py  normalize.py  receivables.py  schema.sql
tests/: conftest.py  test_acceptance.py  test_advisor_balances.py  test_advisor_goals_digest.py  test_advisor_money_engine.py  test_anomalies.py  test_briefs.py  test_bulk_categorize.py  test_cashflow_currency_window.py  test_categorize.py  test_changes_since_brief.py  test_classify_engine.py  test_cli_advice.py  test_cli_advisor.py  test_cli_categorize.py  test_cli_ingest.py  test_cli_plaid.py  test_cli_refresh.py  test_cli_ws.py  test_config.py  test_db_immutability.py  test_fx.py  test_goals.py  test_ingest_core.py  test_ingest_csv_td.py  test_ingest_ofx.py  test_ingest_plaid.py  test_ingest_ws.py  test_locked_accounts.py  test_match_splits.py  test_match_splits_templates.py  test_match_transfers.py  test_match_transfers_pure.py  test_money.py  test_normalize.py  test_projection.py  test_receivables_settle.py  test_reconcile.py  test_report_analytics.py  test_smoke.py  (+4 more)
tests/fixtures/: malformed.ofx  (+6 more)
(+34 files in other folders)
