[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bankapp"
version = "0.0.0"
description = "Local-first personal-finance sync, categorization, and advisor pipeline"
requires-python = ">=3.10"
dependencies = [
    "ws-api==0.35.0",
    "ofxtools==1.1.1",
    "plaid-python==40.1.0",
    "keyring",
    "typer",
    "tomli; python_version<\"3.11\"",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
finance = "bankapp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bankapp = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
